# Homework_6

Контейнер_Спискового_Типа/: CMakeLists.txt  Main_SimpleList.cpp  SimpleList.h
Последовательный_контейнер/: CMakeLists.txt  SimpleVector.cpp
